--- a/package.json
+++ b/package.json
@@ -15,34 +15,23 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-<<<<<<< HEAD
-    "start": "node index.js"
-=======
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "engines": {
-    "node": ">=18"
->>>>>>> 02279b245652f3a5dc7889cf2c155fe4969103e6
+    "docs": "jsdoc -c jsdoc.json"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-<<<<<<< HEAD
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.3",
-=======
-    "dotenv": "^17.2.2",
-    "express": "^5.1.0",
-    "express-validator": "^7.2.1",
-    "jsonwebtoken": "^9.0.2",
->>>>>>> 02279b245652f3a5dc7889cf2c155fe4969103e6
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0"
   },
-  "keywords": []
+  "keywords": [],
+  "devDependencies": {
+    "jsdoc": "^4.0.5"
+  }
 }
